Linked all buttons

--- a/app/templates/proAdd.html
+++ b/app/templates/proAdd.html
@@ -15,7 +15,7 @@
 					<strong class="col-2">Quantity :&nbsp;</strong>
 					<input type="number" class="col-8" name="" id="price">
 				</div>
-				<a class="btn btn-danger col-2" href="ProManage.html">Cancel</a>
+                <a class="btn btn-danger col-2" href="{{ url_for('promanag') }}">Cancel</a>
 				<input type="submit" value="Add Product" class="btn btn-success col-3">
 			</form>
 {% endblock body%}
