--- a/app/templates/include/navbar.html
+++ b/app/templates/include/navbar.html
@@ -4,7 +4,7 @@
       <!-- <input class="form-control form-control-dark" type="text" placeholder="Search" aria-label="Search"> -->
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="#">Log out</a>
+                <a class="nav-link" href="{{ url_for('logout') }}">Log out</a>
         </li>
       </ul>
     </nav>
@@ -19,24 +19,24 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="StoManae.html">
+                        <a class="nav-link" href="{{ url_for('inventory') }}">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
 					Inventory Management
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="ProManage.html">
+                        <a class="nav-link" href="{{ url_for('promanag') }}">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
 					Products
 					</a>
 				<li class="nav-item">
-					<a class="nav-link" href="VendManage.html">
+                        <a class="nav-link" href="{{ url_for('vendmanag') }}">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart-2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>
 					Vendor Sale
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="VendRecManage.html">
+                        <a class="nav-link" href="{{ url_for('vendrec') }}">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-layers"><polygon points="12 2 2 7 12 12 22 7 12 2"></polygon><polyline points="2 17 12 22 22 17"></polyline><polyline points="2 12 12 17 22 12"></polyline></svg>
 					Vendor Recived
 					</a>
