--- a/app/templates/proManag.html
+++ b/app/templates/proManag.html
@@ -3,7 +3,7 @@
 {% block body %}
           <h1 class="m-2 p-2">Product List</h1>
           <div class="container card">
-            <a href="ProAdd.html" class="ml-auto btn btn-success p-2 m-2">Add Product</a>
+                  <a href="{{ url_for('proadd') }}" class="ml-auto btn btn-success p-2 m-2">Add Product</a>
               <table class="table table-striped table-sm table-bordered">
               <thead class="thead-dark">
                 <tr>
