--- a/app/templates/vendManag.html
+++ b/app/templates/vendManag.html
@@ -4,7 +4,7 @@
 {% block body %}
 			<h1 class="m-2 p-2">Vendor Sale List</h1>
 			          <div class="container card">
-            <a href="VendAdd.html" class="ml-auto btn btn-success p-2 m-2">Add Vendor Sales</a>
+                    <a href="{{ url_for('vendadd') }}" class="ml-auto btn btn-success p-2 m-2">Add Vendor Sales</a>
               <table class="table table-striped table-sm table-bordered">
               <thead class="thead-dark">
                 <tr>
