--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -27,6 +27,13 @@
                 </ul>
                 {% endif %}
                 {{ form.password(placeholder = "Password") }}
+                {% if form.password.errors %}
+                <ul class="errors">
+                    {% for error in form.password.errors %}
+                        <li class="text-danger">{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
 	
                 {{ form.submit(class = "btn btn-info") }}
                 <p>Register for a new company <a href="{{ url_for('register') }}">here</a></p>
