--- a/app/templates/inventory.html
+++ b/app/templates/inventory.html
@@ -15,14 +15,16 @@
 					</tr>
 				</thead>
 				<tbody>
+                    {% for item in items %}
 					<tr>
-					<td contenteditable="true">1,001</td>
-					<td contenteditable="true">Lorem ipsum</td>
+                    <td contenteditable="true">{{ loop.index }}</td>
+                    <td contenteditable="true">{{ item.name}}</td>
 					<td class="text-center">
 					<a href="" class="btn btn-success">Edit</a>
 					<a href="" class="btn btn-danger">Delete</a>
 					</td>
 					</tr>
+                    {% endfor %}
 					<tr>
 					<td contenteditable="true">1,001</td>
 					<td contenteditable="true">Lorem ipsum</td>
@@ -93,12 +95,20 @@
 			</button>
 		</div>
 		<form action="" method="post">
+        {{ form.hidden_tag() }}
 			<div class="modal-body">
-				<input type="text" name="" id="" class="col-12 lead font-weight-bold" placeholder="Add Item">
+                {{ form.name(class = "col-12 lead font-weight-bold", placeholder = "Item Name") }}
+                {% if form.name.errors %}
+                <ul class="errors">
+                    {% for error in form.name.errors %}
+                        <li class="text-danger">{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
 			</div>
 			<div class="modal-footer">
 				<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-				<button type="button" class="btn btn-primary">Add</button>
+                {{ form.submit(class="btn btn-success") }}
 			</div>
 		</form>
 		</div>
