--- a/app/templates/include/navbar.html
+++ b/app/templates/include/navbar.html
@@ -4,7 +4,7 @@
       <!-- <input class="form-control form-control-dark" type="text" placeholder="Search" aria-label="Search"> -->
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-                <a class="nav-link" href="{{ url_for('logout') }}">Log out</a>
+                <a class="nav-link" href="{{ url_for('comp.logout') }}">Log out</a>
         </li>
       </ul>
     </nav>
@@ -19,7 +19,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('inventory') }}">
+                        <a class="nav-link" href="{{ url_for('inv.home') }}">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-file"><path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path><polyline points="13 2 13 9 20 9"></polyline></svg>
 					Inventory Management
 					</a>
