--- a/app/product/templates/proManag.html
+++ b/app/product/templates/proManag.html
@@ -3,7 +3,7 @@
 {% block body %}
           <h1 class="m-2 p-2">Product List</h1>
           <div class="container card">
-                  <a href="{{ url_for('proadd') }}" class="ml-auto btn btn-success p-2 m-2">Add Product</a>
+          <a href="{{ url_for('pro.add') }}" class="ml-auto btn btn-success p-2 m-2">Add Product</a>
               <table class="table table-striped table-sm table-bordered">
               <thead class="thead-dark">
                 <tr>
@@ -15,16 +15,18 @@
                 </tr>
               </thead>
               <tbody>
+                {% for product in products %}
                 <tr>
-                <td contenteditable="true">1,001</td>
-                <td contenteditable="true">Lorem ipsum</td>
-                <td contenteditable="true">50</td>
+                <td contenteditable="true">{{ loop.index }}</td>
+                <td contenteditable="true">{{ product.name }}</td>
+                <td contenteditable="true">{{ product.stock }}</td>
 				<td>10</td>
                 <td class="text-center">
                   <a href="" class="btn btn-success">Edit</a>
-                  <a href="" class="btn btn-danger">Delete</a>
+                  <a href="{{ url_for('pro.delete', id=product.id) }}" class="btn btn-danger">Delete</a>
                 </td>
                 </tr>
+                {% endfor %}
                 <tr>
                 <td contenteditable="true">1,001</td>
                 <td contenteditable="true">Lorem ipsum</td>
@@ -99,3 +101,6 @@
                   </table>
 			</div>
 {% endblock body %}
+{% block script %}
+{{ super() }}
+{% endblock script %}
