--- a/app/templates/include/navbar.html
+++ b/app/templates/include/navbar.html
@@ -1,6 +1,6 @@
 
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Company name</a>
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="{{ url_for('comp.home') }}">Company name</a>
       <!-- <input class="form-control form-control-dark" type="text" placeholder="Search" aria-label="Search"> -->
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
@@ -13,7 +13,7 @@
 			<div class="sidebar-sticky">
 				<ul class="nav flex-column">
 				<li class="nav-item">
-					<a class="nav-link active" href="dashboard.html">
+                <a class="nav-link active" href="{{ url_for('comp.home') }}">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
 					Dashboard <span class="sr-only">(current)</span>
 					</a>
@@ -25,7 +25,7 @@
 					</a>
 				</li>
 				<li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('promanag') }}">
+                        <a class="nav-link" href="{{ url_for('pro.home') }}">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shopping-cart"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
 					Products
 					</a>
