--- a/app/purchase/templates/purchase.html
+++ b/app/purchase/templates/purchase.html
@@ -8,22 +8,22 @@
               <thead class="thead-dark">
                 <tr>
                 <th>S. No.</th>
-                <th>Name Of the Product</th>
-                <th>Quantity</th>
-                <th>Ready</th>
+                <th>Party Name</th>
+                <th>Suplier Date</th>
+                <th>Invoice</th>
                 <th>Options</th>
                 </tr>
               </thead>
               <tbody>
-                {% for product in products %}
+                {% for purchase in purchases %}
                 <tr>
-                <td contenteditable="true">{{ loop.index }}</td>
-                <td contenteditable="true">{{ product.name }}</td>
-                <td contenteditable="true">{{ product.stock }}</td>
-				<td>10</td>
+                <td>{{ loop.index }}</td>
+                <td>{{ purchase.party_name }}</td>
+                <td>{{ purchase.suplier_date }}</td>
+                <td>{{ purchase.invoice }}</td>
                 <td class="text-center">
-                <a href="{{ url_for('pur.edit', id=product.id) }}" class="btn btn-success">Edit</a>
-                  <a href="{{ url_for('pur.delete', id=product.id) }}" class="btn btn-danger">Delete</a>
+                <a href="{{ url_for('pur.edit', id=purchase.id) }}" class="btn btn-success">Edit</a>
+                  <a href="{{ url_for('pur.delete', id=purchase.id) }}" class="btn btn-danger">Delete</a>
                 </td>
                 </tr>
                 {% endfor %}
