Vendor sales frontend done

--- a/app/unit/templates/unit.html
+++ b/app/unit/templates/unit.html
@@ -2,10 +2,10 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-          <h1 class="m-2 p-2">Inventory List</h1>
+          <h1 class="m-2 p-2">Unit List</h1>
           <div class="container card">
 			<button type="button" class="ml-auto btn btn-success p-2 m-2" data-toggle="modal" data-target="#staticBackdrop">
-			Add Inventory
+			Add Unit
 			</button>
               <table class="table table-striped table-sm table-bordered">
 				<thead class="thead-dark">
