--- a/app/unit/templates/unitedit.html
+++ b/app/unit/templates/unitedit.html
@@ -2,7 +2,7 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-    <h1 class="m2 p2">Edit Inventory Item</h1>
+    <h1 class="m2 p2">Edit Unit</h1>
 			<form action="" method="post" class="container">
                 {{ form.hidden_tag() }}
 				<div class="row m-3">
